--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
+
+body {
+  padding: 20px;
+  min-height: 100vh;
+  background-image: url(https://www.oceanprosperityroadmap.org/wp-content/uploads/2015/05/ocean-final.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
